feat: 사용자 프로필 조회 시 프로필 이미지를 같이 반환하도록 구현